[package]
name = "tangy-lib"
description = "Tang protocol library implementation"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Martyn P <martyn@datasync.dev>"]

[dependencies]
jsonwebtoken = "9.3.0"
p521 = { version = ">=0.13.3", features = ["ecdh", "ecdsa", "jwk"] }
elliptic-curve = { version = "0.13.8", features = ["jwk"] }

serde_json = "1.0.115"
serde = "1.0.197"
base64ct = "1.6.0"
sha2 = "0.10.8"

[dev-dependencies]
tempdir = "0.3.7"
